--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nanoid": "^3.1.30",
     "pg": "^8.7.1",
     "sequelize": "^6.9.0"
   }
